--- a/.github/workflows/deplot.yml
+++ b/.github/workflows/deplot.yml
@@ -1,4 +1,3 @@
-
 name: Deploy to EC2
 
 on:
@@ -17,7 +16,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.HARMONYSECRET }}
+          username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd ~/harmony-hub-55/server
