--- a/.github/workflows/deplot.yml
+++ b/.github/workflows/deplot.yml
@@ -18,6 +18,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
           script: |
             cd ~/harmony-hub-55/server
             git pull origin main
