Edit the sctipt in deploy file

--- a/.github/workflows/deplot.yml
+++ b/.github/workflows/deplot.yml
@@ -23,4 +23,6 @@ jobs:
             cd ~/harmony-hub-55/server
             git pull origin main
             npm install
+            npm run build
+            sudo cp -r dist/* /var/www/html/
             sudo systemctl restart node-service
